[package]
name = "wasp"
description = ""
version = "0.1.2"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"

[dependencies]
dotenv = "0.13.0"
structopt = "0.2"
wasp-app-route = { path = "./wasp/app/wasp-app-route", features = ["dev"] }

[profile.release]
lto = true
codegen-units = 1
incremental = false
panic = "abort"
