[package]
name = "wasp"
description = ""
version = "0.1.7"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"

[dependencies]
dotenv = "0.13"
failure = "0.1"
keyring = "0.6"
reqwest = "0.9"
rpassword = "2.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
structopt = "0.2"
wasp-app-route = { path = "./wasp/app/wasp-app-route", features = ["dev"] }

[profile.release]
lto = true
codegen-units = 1
incremental = false
panic = "abort"
